--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "angularfire2": "2.0.0-beta.0",
     "es6-shim": "0.35.1",
     "firebase": "2.4.2",
+    "ng2-notifications": "^0.3.0",
     "reflect-metadata": "0.1.3",
     "rxjs": "5.0.0-beta.6",
     "systemjs": "0.19.26",
