--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -15,9 +15,14 @@
     "target": "es5",
     "inlineSources": true
   },
-
+"exclude": [
+        "node_modules",
+        "typings/browser.d.ts",
+        "typings/browser/**"
+    ],
   "files": [
     "main.ts",
-    "typings.d.ts"
+    "app.component.ts",
+    "ng2-notifications.ts"
   ]
 }
